--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -14,6 +14,7 @@
   <script src="http://gitforked.com/api/1.1/button.js" type="text/javascript"></script>
   
   <script src="{{ site.baseurl }}/prettify/prettify.js"></script>
+  <script src="{{ site.baseurl }}/prettify/lang-css.js"></script>
   <script>prettyPrint();</script>
 
   <script>
