--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,9 @@
  *       Lea Verou, Joni Korpi, Tim Brown, and many others. 
  *       
  *    this stylesheet was written with the utmost care and
- *    dedication given to proper attribution and sourcing.
+ *    dedication given to proper attribution and sourcing;
+ *    if you notice an erroneous or omitted citation, start
+ *    an issue on the github or find me on twitter.
  ============================================================
 */
 
