--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,8 +7,8 @@
 		<nav role="navigation">
 			<ul>
 				<li class="hN gamma"><a data-icon="═" class="sans brand icon txt-white" href="{{ site.baseurl }}/fundamentals">Fundamentals</a></li>
-				<li class="hN gamma"><a data-icon="△" class="sans brand icon txt-white" href="{{ site.baseurl }}/patterns">Patterns</a></li>
-				<li class="hN gamma"><a data-icon="¶" class="sans brand icon txt-white" href="{{ site.baseurl }}/journal">Journal</a></li>
+				<!-- <li class="hN gamma"><a data-icon="△" class="sans brand icon txt-white" href="{{ site.baseurl }}/patterns">Patterns</a></li> -->
+				<!-- <li class="hN gamma"><a data-icon="¶" class="sans brand icon txt-white" href="{{ site.baseurl }}/journal">Journal</a></li> -->
 				<li class="hN gamma"><a data-icon="{}" class="sans brand icon txt-white" href="{{ site.baseurl }}/styleguide">Styleguide</a></li>
 				<li class="hN gamma"><a data-icon="⇧" class="sans brand icon txt-green flipped" href="{{ site.baseurl }}/primer">Primer</a></li>
 			</ul>
@@ -22,31 +22,5 @@
 				<li class="hN delta"><a data-icon="❦" class="sans icon txt-white" href="{{ site.baseurl }}/colophon">Colophon</a></li>
 			</ul>
 		</nav>
-
-			<!-- facebook button -->
-			<div class="social facebook">
-				<div id="fb-root"></div>
-				<div class="fb-like" data-href="http://lab.zacharykain.com/webcraft" data-send="false" data-layout="button_count" data-width="90" data-show-faces="false" data-font="lucida grande"></div>
-				<style>
-					.fb_edge_widget_with_comment span.fb_edge_comment_widget {
-					top: -200px !important;
-					}
-				</style>
-			</div>
-
-			<!-- twitter button -->
-			<div class="social twitter">
-				<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://lab.zacharykain.com/webcraft. t" data-text="Check out Web-Craft, a free web design curriculum" data-via="zakkain">Tweet</a>
-			</div>
-			
-			<!-- google+ button -->
-			<div class="social google">
-				<div class="g-plusone" data-size="medium" data-href="lab.zacharykain.com/webcraft"></div>
-			</div>
-
-			<!-- github fork button -->
-			<div class="social github">
-				<a href="https://github.com/zakkain/webcraft" class="gitforked-button gitforked-forks">Fork</a>
-			</div>
 	</footer>
 </div>
