--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,7 +52,7 @@
   </script>
   
   <!--  stylesheets -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
     
   <!--  modernizr
 	<script src="js/libs/modernizr-2.5.3.min.js"></script> -->
